Проверить UserController и с ним связанные моменты в openapi.yaml
