# src/main/resources/static/openapi/openapi.yaml
@@ -150,95 +150,8 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/AuthenticateRefreshUserResponse"
-  /api/v1/users/me:
-    get:
-      tags:
-        - user-controller
-      operationId: getUserById
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchUserResponse"
-    patch:
-      tags:
-        - user-controller
-      operationId: updateUser
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchUserRequest"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchUserResponse"
+
+
 components:
   schemas:
     SignupUserRequest:
